--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -17,13 +17,13 @@
         }
         #video-container {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-around;
             width: 80%;
             margin-bottom: 20px;
+            flex-wrap: wrap;
         }
         video {
-          max-width: 40%;
+            max-width: 45%;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -41,12 +41,20 @@
         }
         #main-controls {
             display: flex;
-            align-items: center;
             flex-direction: column;
+            align-items: center;
             width: 100%;
         }
         #main-controls label, #main-controls button {
             margin-bottom: 10px;
+        }
+        .video-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .video-wrapper video {
+            margin-bottom: 5px;
         }
     </style>
 </head>
@@ -82,7 +90,6 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -148,29 +155,9 @@
             peer.on('connection', conn => {
                 conn.on('data', data => {
                     if (data.type === 'like') {
-                        const senderId = conn.peer;
-                        if (!likedUsers[senderId]) {
-                            likedUsers[senderId] = 1;
-                        } else {
-                            likedUsers[senderId]++;
-                        }
-                        updateLikesCount(senderId);
+                        handleLike(conn.peer);
                     } else if (data.type === 'unlike') {
-                        const senderId = conn.peer;
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
-                        if (!unlikedUsers[senderId]) {
-                            unlikedUsers[senderId] = 1;
-                        } else {
-                            unlikedUsers[senderId]++;
-                        }
-                        updateUnlikesCount(senderId);
-
+                        handleUnlike(conn.peer);
                     }
                 });
             });
@@ -206,34 +193,20 @@
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
 
-            if (device === 'iOS') {
-                if (videoDevices.length > 1) {
-                    cameraSelect.innerHTML = `
-                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                    `;
-                } else {
-                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
-                }
-            } else if (device === 'Android') {
-                if (videoDevices.length > 1) {
-                    cameraSelect.innerHTML = `
-                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                    `;
-                } else {
-                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
-                }
-            } else {
+            if (videoDevices.length > 1) {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
                     option.text = `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
+            } else if (videoDevices.length === 1) {
+                const option = document.createElement('option');
+                option.value = videoDevices[0].deviceId;
+                option.text = 'Caméra 1';
+                cameraSelect.appendChild(option);
             }
 
-            // Restore the previously selected camera
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
                 cameraSelect.value = savedCameraId;
@@ -315,196 +288,99 @@
             applyMicMute();
         });
 
-        muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
-        });
+        function addRemoteVideo(peerId, remoteStream) {
+            const existingWrapper = document.getElementById(peerId);
+            if (existingWrapper) return;
 
-        cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
-                const stream = await getLocalStream();
-                if (call) {
-                    call.peerConnection.getSenders().forEach(sender => {
-                        if (sender.track && sender.track.kind === 'video') {
-                            sender.replaceTrack(stream.getVideoTracks()[0]);
-                        }
-                    });
-                }
-            }
-    await getLocalStream();
-        });
+            const video = document.createElement('video');
+            video.autoplay = true;
+            video.playsInline = true;
+            video.srcObject = remoteStream;
 
-        peerId.addEventListener('input', () => {
-            const command = peerId.value.trim();
-            const unlikeButtons = document.querySelectorAll('.unlike-button');
-            unlikeButtons.forEach(button => {
-                if (command === '!unlike') {
-                    button.style.display = 'block';
-                } else {
-                    button.style.display = 'none';
-                }
-            });
-        });
+            const wrapper = document.createElement('div');
+            wrapper.className = 'video-wrapper';
+            wrapper.id = peerId;
 
-        function addRemoteVideo(peerId, stream) {
-            if (!document.getElementById(peerId + '-wrapper')) {
-                const videoWrapper = document.createElement('div');
-                videoWrapper.className = 'video-wrapper';
-                videoWrapper.id = peerId + '-wrapper';
+            const controls = document.createElement('div');
+            controls.className = 'controls';
+            const likeButton = document.createElement('button');
+            likeButton.textContent = '❤️';
+            likeButton.addEventListener('click', () => handleLike(peerId));
+            controls.appendChild(likeButton);
 
-                const videoElement = document.createElement('video');
-                videoElement.id = peerId + 'Video';
-                videoElement.autoplay = true;
-                videoElement.playsinline = true;
-                videoElement.srcObject = stream;
-                videoWrapper.appendChild(videoElement);
+            const unlikeButton = document.createElement('button');
+            unlikeButton.textContent = '⚡';
+            unlikeButton.addEventListener('click', () => handleUnlike(peerId));
+            controls.appendChild(unlikeButton);
 
-                const controlsDiv = document.createElement('div');
-                controlsDiv.className = 'controls';
+            const likeCount = document.createElement('p');
+            likeCount.className = 'like-count';
+            likeCount.textContent = 'Likes: 0';
+            controls.appendChild(likeCount);
 
-                const likeButton = document.createElement('button');
-                likeButton.className = 'like-button';
-                likeButton.innerText = '❤️';
-                likeButton.addEventListener('click', () => sendLike(peerId));
+            const unlikeCount = document.createElement('p');
+            unlikeCount.className = 'unlike-count';
+            unlikeCount.textContent = 'Unlikes: 0';
+            controls.appendChild(unlikeCount);
 
-                const unlikeButton = document.createElement('button');
-                unlikeButton.className = 'unlike-button';
-                unlikeButton.innerText = '⚡';
-                unlikeButton.style.display = 'none';
-                unlikeButton.addEventListener('click', () => sendUnlike(peerId));
-
-                const likesCount = document.createElement('p');
-                likesCount.className = 'likes-count';
-                likesCount.innerText = 'Likes reçus: 0';
-
-                const unlikesCount = document.createElement('p');
-                unlikesCount.className = 'unlikes-count';
-                unlikesCount.innerText = 'Unlikes reçus: 0';
-                unlikesCount.style.display = 'none';
-
-                controlsDiv.appendChild(likeButton);
-                controlsDiv.appendChild(unlikeButton);
-                controlsDiv.appendChild(likesCount);
-                controlsDiv.appendChild(unlikesCount);
-
-                videoWrapper.appendChild(controlsDiv);
-                videoContainer.appendChild(videoWrapper);
-            }
+            wrapper.appendChild(video);
+            wrapper.appendChild(controls);
+            videoContainer.appendChild(wrapper);
         }
 
         function removeRemoteVideo(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            const videoWrapper = document.getElementById(peerId);
             if (videoWrapper) {
                 videoWrapper.remove();
             }
         }
 
-        function updateLikesCount(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
+        function handleLike(peerId) {
+            const currentLikes = likedUsers[peerId] || 0;
+            likedUsers[peerId] = currentLikes + 1;
+            saveLikes();
+            sendMessage(peerId, { type: 'like' });
+            updateLikeCount(peerId);
+        }
+
+        function handleUnlike(peerId) {
+            const currentUnlikes = unlikedUsers[peerId] || 0;
+            unlikedUsers[peerId] = currentUnlikes + 1;
+            saveUnlikes();
+            sendMessage(peerId, { type: 'unlike' });
+            updateUnlikeCount(peerId);
+        }
+
+        function updateLikeCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
             if (videoWrapper) {
-                const likesCount = videoWrapper.querySelector('.likes-count');
-                if (likesCount) {
-                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
-                }
+                const likeCountElem = videoWrapper.querySelector('.like-count');
+                likeCountElem.textContent = `Likes: ${likedUsers[peerId] || 0}`;
             }
         }
 
-        function updateUnlikesCount(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
+        function updateUnlikeCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
             if (videoWrapper) {
-                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
-                if (unlikesCount) {
-                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-                    if (unlikedUsers[peerId] > 0) {
-                        unlikesCount.style.display = 'block';
-                    }
-                }
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
+                const unlikeCountElem = videoWrapper.querySelector('.unlike-count');
+                unlikeCountElem.textContent = `Unlikes: ${unlikedUsers[peerId] || 0}`;
             }
         }
 
-        function sendLike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'like' });
-            });
+        function saveLikes() {
+            localStorage.setItem('likes', JSON.stringify(likedUsers));
         }
 
-        function sendUnlike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'unlike' });
-                setTimeout(() => {
-                    removeRemoteVideo(peerId);
-                    if (call && call.peer === peerId) {
-                        call.close();
-                    }
-                }, 5000);
-            });
+        function saveUnlikes() {
+            localStorage.setItem('unlikes', JSON.stringify(unlikedUsers));
         }
 
-        updateCameraSelect();
-
-(async function initialize() {
-            await updateCameraSelect();
-            const storedCameraId = localStorage.getItem('selectedCameraId');
-            if (storedCameraId) {
-                cameraSelect.value = storedCameraId;
-            }
-        })();
-
-        function handleLike(senderId) {
-            if (!likedUsers[senderId]) {
-                likedUsers[senderId] = 1;
-            } else {
-                likedUsers[senderId]++;
-            }
-            updateLikeCounts(senderId);
-        }
-
-        function handleUnlike(senderId) {
-            if (!unlikedUsers[senderId]) {
-                unlikedUsers[senderId] = 1;
-            } else {
-                unlikedUsers[senderId]++;
-            }
-            updateLikeCounts(senderId);
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
-        }
-
-        function updateLikeCounts(peerId) {
-            const videoWrapper = document.getElementById(`videoWrapper-${peerId}`);
-            if (videoWrapper) {
-                const likeCount = likedUsers[peerId] || 0;
-                const unlikeCount = unlikedUsers[peerId] || 0;
-                videoWrapper.querySelector('.like-count').textContent = `Likes: ${likeCount}`;
-                videoWrapper.querySelector('.unlike-count').textContent = `Unlikes: ${unlikeCount}`;
+        function sendMessage(peerId, message) {
+            const conn = peer.connections[peerId];
+            if (conn && conn[0]) {
+                conn[0].send(message);
             }
         }
-
-    setInterval(() => {
-        if (localStorage.getItem('excludedUser')) {
-            document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-            throw new Error("L'utilisateur est exclu");
-        }
-        Object.keys(peerConnections).forEach(peerId => {
-            updateLikeCounts(peerId);
-        });
-    }, 5000);
     </script>
 </body>
 </html>
